# gitpod-workspaces

./: .bazelrc  .gitignore  .gitpod.yml  MODULE.bazel  push_all.sh  push_base.sh  push_full.sh  push_mysql.sh  push_postgres.sh  requirements.txt  requirements_lock.txt  versions.bzl
rules/docker/: BUILD.bazel  defs.bzl
rules/docker/private/: BUILD.bazel  rules_docker.bzl  version_group.bzl  version_group_test.bzl  wrapper.sh
tools/template/: BUILD.bazel  dockerfile.jinja  template.py  template_lib.py  template_test.py  values.json
workspace-base-bazelisk/: BUILD.bazel  Dockerfile  Dockerfile.jinja  Dockerfile.mustache
workspace-docker-bazelisk/: BUILD.bazel  Dockerfile  Dockerfile.jinja  Dockerfile.mustache
workspace-full-bazelisk/: BUILD.bazel  Dockerfile  Dockerfile.jinja
workspace-mysql-bazelisk/: BUILD.bazel
workspace-postgres-bazelisk/: BUILD.bazel  Dockerfile.mustache
