load("//rules/docker:defs.bzl", "docker_images")
load("//rules/docker/private:rules_docker.bzl", "docker_template")
load("//:versions.bzl", "GITPOD_WORKSPACE_VERSION", "CURRENT_BAZEL_VERSION", "BAZEL_VERSIONS", "BAZELISK_VERSION")

docker_images(
    name = "workspace-base-bazelisk",
    workspace_name = "gitpod/workspace-base",
    tag_base = "halaco/gitpod-workspace-base-bazelisk-exp",
    workspace_version = GITPOD_WORKSPACE_VERSION,
    docker_file_template = "Dockerfile.mustache",
    current_bazel_vesrion = CURRENT_BAZEL_VERSION,
    bazel_versions = BAZEL_VERSIONS,
    bazelisk_vesion = BAZELISK_VERSION,
)

docker_template(
    name = "dockerfile",
    template = "Dockerfile.mustache",
    dockerfile = "Dockerfile",
    prefix = "bazel",
    values = {
        "workspace": "gitpod/workspace-base",
        "workspace_version": GITPOD_WORKSPACE_VERSION,
        "bazel_version": CURRENT_BAZEL_VERSION,
        "bazelisk_version": BAZELISK_VERSION,
    },
)
