load("//rules/docker:defs.bzl", "docker_images")
load("//rules/docker/private:rules_docker.bzl", "docker_template")
load("//:versions.bzl", "GITPOD_WORKSPACE_TAG", "CURRENT_BAZEL_VERSION", "BAZEL_VERSIONS", "BAZELISK_VERSION")

docker_images(
    name = "workspace-base-bazelisk",
    workspace_name = "gitpod/workspace-base",
    tag_base = "halaco/gitpod-workspace-base-bazelisk",
    workspace_version = GITPOD_WORKSPACE_TAG,
    docker_file_template = "Dockerfile.jinja",
    current_bazel_vesrion = CURRENT_BAZEL_VERSION,
    bazel_versions = BAZEL_VERSIONS,
    bazelisk_vesion = BAZELISK_VERSION,
)

docker_template(
    name = "dockerfile",
    template = "Dockerfile.jinja",
    dockerfile = "Dockerfile",
    prefix = "bazel",
    values = {
        "workspace": "gitpod/workspace-base",
        "workspace_version": GITPOD_WORKSPACE_TAG,
        "bazel_version": CURRENT_BAZEL_VERSION,
        "bazelisk_version": BAZELISK_VERSION,
    },
)
