load("//rules/docker:defs.bzl", "docker_images")
load("//:versions.bzl", "GITPOD_WORKSPACE_TAG", "CURRENT_BAZEL_VERSION", "BAZEL_VERSIONS", "BAZELISK_VERSION")

docker_images(
    name = "workspace-mysql-bazelisk",
    workspace_name = "gitpod/workspace-mysql",
    tag_base = "halaco/gitpod-workspace-mysql-bazelisk",
    workspace_version = GITPOD_WORKSPACE_TAG,
    docker_file_template = "Dockerfile.jinja",
    current_bazel_vesrion = CURRENT_BAZEL_VERSION,
    bazel_versions = BAZEL_VERSIONS,
    bazelisk_vesion = BAZELISK_VERSION,
)
