load("//rules/docker:defs.bzl", "docker_images")
load("//rules/docker/private:rules_docker.bzl", "docker_template")
load("//:versions.bzl", "CURRENT_BAZEL_VERSION", "BAZEL_VERSIONS", "BAZELISK_VERSION")

# As of 2024/08/28, the latest version of gitpod/workspace-postgres not found.
# Fit the worspace version to the last exist version.
GITPOD_WORKSPACE_VERSION = "2024-07-14-17-19-51"

docker_images(
    name = "workspace-postgres-bazelisk",
    workspace_name = "gitpod/workspace-postgres",
    tag_base = "halaco/gitpod-workspace-postgres-bazelisk",
    workspace_version = GITPOD_WORKSPACE_VERSION,
    docker_file_template = "Dockerfile.mustache",
    current_bazel_vesrion = CURRENT_BAZEL_VERSION,
    bazel_versions = BAZEL_VERSIONS,
    bazelisk_vesion = BAZELISK_VERSION,
)

docker_template(
    name = "dockerfile",
    template = "Dockerfile.mustache",
    dockerfile = "Dockerfile",
    prefix = "bazel",
    values = {
        "workspace": "gitpod/workspace-postgres",
        "workspace_version": GITPOD_WORKSPACE_VERSION,
        "bazel_version": CURRENT_BAZEL_VERSION,
        "bazelisk_version": BAZELISK_VERSION,
    },
)
